with modal proto

--- a/src/app/tapes.component.html
+++ b/src/app/tapes.component.html
@@ -2,19 +2,24 @@
    <p></p>
     <ul class="tapes">
       <li *ngFor="let vhs of tapes" 
->
+
+        [class.selected]="vhs === selectedVhs"
+        (click)="onSelect(vhs)">
   <div class="badge" data-toggle="modal" data-target="#detailsModal">{{vhs.title}}</div>
   <div>Genre: {{vhs.genre}}</div>
   <div>Director: {{vhs.director}}</div>
   <div>Stars: {{vhs.stars}}</div>
   <div>Year: {{vhs.year}}</div>
+  <button type="button" class="edit" data-toggle="modal" data-target="#editModal">edit</button> 
       </li>
     </ul>
 
 
 
 
-  <!-- Modal -->
+
+
+  <!-- Modal for details-->
   <div class="modal fade" id="detailsModal" role="dialog">
     <div class="modal-dialog">
     
@@ -25,7 +30,7 @@
           <h4 class="modal-title">Movie details</h4>
         </div>
         <div class="modal-body">
-          <p>Genre: [attr.data-id]="vhs.year"</p>
+          <vhs-detail [vhs]="selectedVhs"></vhs-detail>
           
         </div>
         <div class="modal-footer">
@@ -36,3 +41,25 @@
     </div>
   </div>
 
+
+  <!-- Modal for edit-->
+  <div class="modal fade" id="editModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Edit movie</h4>
+        </div>
+        <div class="modal-body">
+          <vhs-detail [vhs]="selectedVhs"></vhs-detail>
+          
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
