--- a/src/app/vhs-detail.component.html
+++ b/src/app/vhs-detail.component.html
@@ -3,8 +3,10 @@
       <h2>{{vhs.title}} details!</h2>
        <div><label>id: </label>{{vhs.id}}</div>
        <div>
-        <!--<label>title: </label>
-        <input [(ngModel)]="vhs.title" placeholder="title"/>-->
+        <label>title: </label>
+        <input [(ngModel)]="vhs.title" placeholder="title"/>
        </div>
+         <button (click)="goBack()">Back</button>
+  <button (click)="save()">Save</button>
      </div>
       
