--- a/src/app/vhs-edit.component.html
+++ b/src/app/vhs-edit.component.html
@@ -1,10 +1,21 @@
-<div *ngIf="vhs">
-  <h2>{{vhs.title}} details!</h2>
-  <div>
-    <label>title: </label>
-    <input name="title" type="text" class="form-control" [(ngModel)]="title" />
-    <label>director: </label>
-    <input [(ngModel)]="vhs.director" placeholder="director" />
+<section id="forms">
+  <div *ngIf="vhs">
+    <div><img id="cover" src="./img/{{vhs.image}}" style="width: 33%; height: 33%;" align="right" /></div>
+    <h2>{{vhs.title}}</h2>
+    <div>Title: </div>
+    <input type="text" class="input-xlarge" id="input01" [(ngModel)]="vhs.title" placeholder="title" />
+    <div>Year: </div>
+    <input type="text" class="input-xlarge" id="input01" [(ngModel)]="vhs.year" placeholder="year" />
+    <div>Genre: </div>
+    <input type="text" class="input-xlarge" id="input01" [(ngModel)]="vhs.genre" placeholder="genre" />
+    <div>Director: </div>
+    <input type="text" class="input-xlarge" id="input01" [(ngModel)]="vhs.director" placeholder="director" />
+    <div>Actors: </div>
+    <input type="text" class="input-xlarge" id="input01" [(ngModel)]="vhs.stars" placeholder="stars" />
+    <div>Description: </div>
+    <textarea type="text" class="input-xlarge" id="textarea" rows="6" [(ngModel)]="vhs.description" placeholder="description"></textarea>
   </div>
-  <button class="btn btn-warning" (click)="update(vhs)">Save</button>
-</div>
+</section>
+
+
+
