--- a/src/app/vhs-search.component.html
+++ b/src/app/vhs-search.component.html
@@ -2,9 +2,9 @@
   <h4>Vhs Search</h4>
   <input #searchBox id="search-box" (keyup)="search(searchBox.value)" />
   <div>
-    <div *ngFor="let vhs of tapes | async"
-         (click)="gotoDetail(vhs)" class="search-result" >
-      {{vhs.<title></title>}}
+    <div *ngFor="let vhs of tapes | async" (click)="gotoDetail(vhs)" class="search-result">
+      {{vhs.
+      <title></title>}}
     </div>
   </div>
 </div>
