--- a/src/app/tapes.component.html
+++ b/src/app/tapes.component.html
@@ -1,153 +1,241 @@
-<button type="button" class="add" data-toggle="modal" data-target="#addModal">Add Movie</button>
-
+<p></p>
+<div><button type="button" class="btn" data-toggle="modal" data-target="#addModal">Add Movie</button></div>
+<p></p>
+<h4>Free Tapes</h4>
 <div>
-  <div>Filter by:</div>
+  <div>Search by title:</div>
   <div>
     <input type='text' [(ngModel)]='term' />
   </div>
 </div>
 
 <!--Buttons for sorting-->
-<button class="btn btn-default" [class.active]="sortBy==='title'" (click)="sortBy='title'">SortByTitle</button>
-<button class="btn btn-default" [class.active]="sortBy==='year'" (click)="sortBy='year'">SortByYear</button>
+<button class="btn btn-info" (click)="sortBy('title')">Sort By Title</button>
+  <button class="btn btn-info" (click)="sortBy('id')">Sort By ID</button>
 
 
 
-<table class="table table-bordered table-striped table-hover">
-  <thead>
-    <tr>
-      <th>
-        <h4>#</h4>
-      </th>
-      <th>
-        <h4>Title</h4>
-      </th>
-      <th>
-        <h4>Genre</h4>
-      </th>
-      <th>
-        <h4>Year</h4>
-      </th>
-      <th width="10%"></th>
-      <th width="10%"></th>
-      <th width="10%"></th>
-      <th width="5%"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let vhs of (tapes | free) | filter: term" [class.selected]="vhs === selectedVhs" (click)="onSelect(vhs)">
-      <th scope="row">{{vhs.id}}</th>
-      <td data-toggle="modal" data-target="#detailsModal">{{vhs.title}}</td>
-      <td>{{vhs.genre}}</td>
-      <td>{{vhs.year}}</td>
-      <td>{{vhs.status}}</td>
-      <td><button type="button" class="btn btn-info" data-toggle="modal" data-target="#detailsModal">details</button> </td>
-      <td><button type="button" class="btn btn-primary" (click)="rent(vhs)">rent</button> </td>
-      <td><button type="button" class="btn btn-inverse" data-toggle="modal" data-target="#editModal">edit</button> </td>
-      <td><button class="btn btn-danger" (click)="delete(vhs); $event.stopPropagation()">x</button> </td>
-    </tr>
+    <table class="table table-bordered table-striped table-hover">
+      <thead>
+        <tr>
+          <th>
+            <h4>#</h4>
+          </th>
+          <th>
+            <h4>Title</h4>
+          </th>
+          <th>
+            <h4>Genre</h4>
+          </th>
+          <th>
+            <h4>Year</h4>
+          </th>
+          <th>
+            <h4>Director</h4>
+          </th>
+          <th width="10%"></th>
+          <th width="10%"></th>
+          <th width="10%"></th>
+          <th width="10%"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let vhs of (tapes | free ) | filter: term | sort: sortType" [class.selected]="vhs === selectedVhs" (click)="onSelect(vhs)">
+          <th scope="row">{{vhs.id}}</th>
+          <td data-toggle="modal" data-target="#detailsModal">{{vhs.title}}</td>
+          <td>{{vhs.genre}}</td>
+          <td>{{vhs.year}}</td>
+          <td>{{vhs.director}}</td>
+          <td><button type="button" class="btn btn-info" data-toggle="modal" data-target="#detailsModal">details</button> </td>
+          <td><button type="button" class="btn btn-primary" (click)="rent(vhs)">rent</button> </td>
+          <td><button type="button" class="btn btn-inverse" data-toggle="modal" data-target="#editModal">edit</button> </td>
+          <td><button class="btn btn-danger" (click)="delete(vhs); $event.stopPropagation()">x</button> </td>
+        </tr>
 
-  </tbody>
-</table>
-
-
-
-
-
-
-
-<!-- Modal for details-->
-<div class="modal fade" id="detailsModal" role="dialog" background=black>
-  <div class="modal-dialog">
-
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Movie details</h4>
-      </div>
-      <div class="modal-body">
-        <vhs-detail [vhs]="selectedVhs"></vhs-detail>
-
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-
-  </div>
-</div>
-
-
-<!-- Modal for edit-->
-<div class="modal fade" id="editModal" role="dialog">
-  <div class="modal-dialog">
-
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Edit movie</h4>
-      </div>
-      <div class="modal-body">
-        <vhs-edit [vhs]="selectedVhs"></vhs-edit>
-
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-
-  </div>
-</div>
+      </tbody>
+    </table>
 
 
 
 
 
-
-<div class="modal fade" id="addModal" role="dialog">
-  <div class="modal-dialog modal-sm">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Add new tape</h4>
-      </div>
-      <div class="modal-body">
-        <!-- Add tape form -->
-        <form id="add-tape" class="navbar-form navbar-left">
-          <div>
-            <label>Id: </label>
-            <input name="id" type="text" class="form-control" [(ngModel)]="id" />
-            <label>Title: </label>
-            <input name="title" type="text" class="form-control" [(ngModel)]="title" />
-            <label>Genre: </label>
-            <input name="title" type="text" class="form-control" [(ngModel)]="genre" />
-            <label>Director: </label>
-            <input name="director" type="text" class="form-control" [(ngModel)]="director" />
-            <label>Stars: </label>
-            <input name="stars" type="text" class="form-control" [(ngModel)]="stars" />
-            <label>Release year: </label>
-            <input name="year" type="text" class="form-control" [(ngModel)]="year" />
+    <!-- Modal for details-->
+    <div class="modal fade" id="detailsModal" role="dialog" background=black>
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Movie details</h4>
+          </div>
+          <div class="modal-body">
+            <vhs-detail [vhs]="selectedVhs"></vhs-detail>
 
           </div>
-          <div>
-            <label>Description: </label>
-            <textarea name="description" class="form-control" rows="5" id="comment" [(ngModel)]="description"></textarea>
-
-            <label>Status: </label>
-            <input name="status" type="text" class="input-xlarge uneditable-input" id="disabledInput" placeholder="free" disabled=""
-            />
-            <label>Link to image: </label>
-            <input name="image" type="text" class="form-control" [(ngModel)]="image" />
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
-          <p></p>
-          <button class="btn btn-warning" (click)="add()">Add</button>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+
       </div>
     </div>
-  </div>
-</div>
+
+
+    <!-- Modal for edit-->
+    <div class="modal fade" id="editModal" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Edit movie</h4>
+          </div>
+          <div class="modal-body">
+            <vhs-edit [vhs]="selectedVhs"></vhs-edit>
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+
+
+
+
+    <!-- Modal for add-->
+    <div>
+      <div>
+        <button type="button" class="btn btn-default" data-toggle="modal" data-target="#addModal">Add movie</button>
+        <div id="addModal" class="modal fade" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+              </div>
+              <div class="modal-body">
+                <h2>Add new movie</h2>
+                <form (ngSubmit)="onSubmit()" #movieForm="ngForm">
+
+                  <!--<div class="form-group">
+                <label for="name">Movie title</label>
+                <input type="text" class="form-control" id="name" required [(ngModel)]="model.name" name="name" #name="ngModel">
+                <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+                  Title is required
+                </div>
+              </div>-->
+
+                  <div class="form-group">
+                    <label for="title">Title</label>
+                    <input type="text" class="form-control" id="title" required minlength=2 maxlength=30 [(ngModel)]="model.title" name="title"
+                      #title="ngModel">
+                    <div [hidden]="title.valid || title.pristine" class="alert alert-danger">
+                      Title is required (Minimum of 2 characters, maximum 30 characters)
+                    </div>
+                  </div>
+
+
+                                    <div class="form-group">
+                    <label for="genre">Genre</label>
+                    <input type="text" class="form-control" id="genre" required minlength=2 maxlength=30 [(ngModel)]="model.genre" name="genre"
+                      #genre="ngModel">
+                    <div [hidden]="genre.valid || genre.pristine" class="alert alert-danger">
+                      Genre is required
+                    </div>
+                  </div>
+
+
+                  <div class="form-group">
+                    <label for="director">Director</label>
+                    <input type="text" class="form-control" id="director" required [(ngModel)]="model.director" name="director" #director="ngModel">
+                    <div [hidden]="director.valid || director.pristine" class="alert alert-danger">
+                      Director is required
+                    </div>
+                  </div>
+
+                  <div class="form-group">
+                    <label for="stars">Stars</label>
+                    <input type="text" class="form-control" id="stars" required [(ngModel)]="model.stars" name="stars" #stars="ngModel">
+                    <div [hidden]="stars.valid || stars.pristine" class="alert alert-danger">
+                      Stars are required
+                    </div>
+                  </div>
+
+
+                  <div class="form-group">
+                    <label for="year">Year</label>
+                    <input type="number" min=1900 max=2050 class="form-control" id="year" required [(ngModel)]="model.year" name="year" #year="ngModel">
+                    <div [hidden]="year.valid || year.pristine" class="alert alert-danger">
+                      Year are required
+                    </div>
+                  </div>
+
+                  <div class="form-group">
+                    <label for="time">Time</label>
+                    <input type="number" class="form-control" id="time" required [(ngModel)]="model.time" name="time" #time="ngModel">
+                    <div [hidden]="time.valid || time.pristine" class="alert alert-danger">
+                      Time are required
+                    </div>
+                  </div>
+
+
+
+                  <div class="form-group">
+                    <label for="description">Description</label>
+                    <textarea type="text" class="form-control" id="description" rows="6" [(ngModel)]="model.description" name="description" #description="ngModel"></textarea>
+                  </div>
+
+
+                  <div class="form-group">
+                    <label for="image">Cover image url</label>
+                    <input type="text" class="form-control" id="image" [(ngModel)]="model.image" name="image" #image="ngModel">
+                  </div>
+
+
+
+
+                  <!--<div class="form-group">
+                <label for="date">Movie date</label>
+                <input type="text" class="form-control" id="date" required [(ngModel)]="model.date" name="date" #date="ngModel">
+                <div [hidden]="date.valid || date.pristine" class="alert alert-danger">
+                  Date is required
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="rented">Movie status</label>
+                <input type="text" class="form-control" id="rented" required [(ngModel)]="model.rented" name="rented" #rented="ngModel">
+                <div [hidden]="rented.valid || rented.pristine" class="alert alert-danger">
+                  Status is required. Must be true (rented) or false (free)
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="form-group">
+                  <label for="cover">Movie cover</label>
+                  <input type="text" class="form-control" id="cover" [(ngModel)]="model.cover" name="cover">
+                </div>
+                <label for="personName">Movie personName</label>
+                <input type="text" class="form-control" id="personName" [(ngModel)]="model.personName" name="personName">
+              </div>
+              <div class="form-group">
+                <label for="personSurname">Movie personSurname</label>
+                <input type="text" class="form-control" id="personSurname" [(ngModel)]="model.personSurname" name="personSurname">
+              </div>
+              <div class="form-group">
+                <label for="dateOfRent">Movie dateOfRent</label>
+                <input type="text" class="form-control" id="dateOfRent" [(ngModel)]="model.dateOfRent" name="dateOfRent">
+              </div>-->
+
+
+                  <button type="submit" class="btn btn-success" [disabled]="!movieForm.form.valid">Add Movie</button>
+                  <button type="button" class="btn btn-default" (click)="newMovie(); movieForm.reset()">Clear Form</button>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
